Fix: Improve responsive design on smaller screens

--- a/src/scss/_reviews.scss
+++ b/src/scss/_reviews.scss
@@ -7,7 +7,7 @@
 
   .content {
     max-width: 1536px;
-    padding: 200px 80px;
+    padding: 200px 40px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -16,6 +16,10 @@
 
     @include device(lg) {
       flex-direction: row;
+    }
+
+    @include device(sm) {
+      padding: 200px 80px;
     }
   }
 
@@ -43,8 +47,8 @@
 .certificate-container {
   padding: 10px;
   background: rgba($color: $color-white, $alpha: 0.1);
-  width: 340px;
-  height: 360px;
+  max-width: 340px;
+  max-height: 360px;
   border-radius: 20px;
   box-shadow: 0 20px 60px rgba($color: #000000, $alpha: 0.18);
 
@@ -97,9 +101,19 @@
 .previous-btn {
   top: 50%;
   left: -60px;
+  display: none;
+
+  @include device(sm) {
+    display: block;
+  }
 }
 
 .next-btn {
   top: 50%;
   right: -60px;
+  display: none;
+
+  @include device(sm) {
+    display: block;
+  }
 }
